--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </section>
 
   <section id="gallery">
-    <h2>מהשטח</h2>
+    <h2>החזון שלנו בתמונות</h2>
     <div id="gallery-container"></div>
   </section>
 
