--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
   <section id="contact">
     <h2>צור קשר</h2>
-    <form>
-      <input type="text" placeholder="שם מלא" required>
-      <input type="email" placeholder="אימייל" required>
-      <textarea placeholder="הודעה" required></textarea>
-      <button type="submit">שלח</button>
-    </form>
+<form action="https://formspree.io/f/mvgkdzwq" method="POST">
+  <input type="text" name="name" placeholder="שם מלא" required>
+  <input type="email" name="email" placeholder="אימייל" required>
+  <textarea name="message" placeholder="הודעה" required></textarea>
+  <button type="submit">שלח</button>
+</form>
   </section>
 
   <script src="mish.js"></script>
