--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="he">
 <head>
@@ -14,7 +15,6 @@
       <ul>
         <li><a href="#home">בית</a></li>
         <li><a href="#about">אודות</a></li>
-        <li><a href="#programs">תוכניות</a></li>
         <li><a href="#donate">איך לעזור</a></li>
         <li><a href="#contact">צור קשר</a></li>
       </ul>
@@ -30,22 +30,24 @@
   <section id="about">
     <h2>אודות העמותה</h2>
     <p>
-      עמותת "משפאחה" פועלת למען ילדים ונערים יתומים, מתוך הבנה עמוקה של תחושת האובדן, הבדידות והפערים החברתיים שאיתם הם מתמודדים.
+      עמותת "משפאחה" נוסדה כדי לספק ליתומים נקודת פתיחה שווה – באמצעות חינוך, כלים טכנולוגיים, ותמיכה רגשית וחברתית.
       <br><br>
-      אנו מאמינים שאין תחליף להורה – אך קיימת דרך לבנות עבור אותם ילדים רשת תמיכה חמה ומשמעותית: רגשית, חינוכית וחברתית.
+      אנו שואפים להקים קהילה תומכת שתשמש עבורם משפחה חלופית, ותאפשר להם לצמוח ולהגשים את עצמם. העמותה פועלת מתוך ראייה מערכתית רחבה, המשלבת חדשנות, חום אנושי, ורצון אמיתי לייצר שינוי בחייהם של אלפי ילדים.
       <br><br>
-      החזון שלנו הוא ליצור עבורם סביבה תומכת שתאפשר להם לצמוח, לפרוח, ולהאמין בעתיד – למרות הכל.
+      אנו מאמינים שאין תחליף להורה – אך קיימת דרך לבנות רשת תמיכה משמעותית, שתצמיח אנשים שלמים ובטוחים בעצמם.
     </p>
-  </section>
-
-  <section id="programs">
-    <h2>תוכניות ופעילויות</h2>
-    <p>חינוך, בריאות, דיור, תמיכה במשפחות...</p>
   </section>
 
   <section id="donate">
     <h2>איך אפשר לעזור?</h2>
-    <p>תרומות, חסות לילדים, התנדבות, מתנות קהילתיות...</p>
+    <p>
+      כל תרומה, התנדבות או מילה טובה – הן חלק מהחזון שלנו. אתם יכולים לעזור בדרכים הבאות:
+      <ul>
+        <li>תרומה כספית – דרך אשראי, ביט או העברה בנקאית</li>
+        <li>הפצה – שתפו את האתר והחזון שלנו ברשתות</li>
+        <li>התנדבות – ליווי, סיוע טכני, או פשוט להיות שם</li>
+      </ul>
+    </p>
   </section>
 
   <section id="gallery">
@@ -60,12 +62,13 @@
 
   <section id="contact">
     <h2>צור קשר</h2>
-<form action="https://formspree.io/f/mvgkdzwq" method="POST">
-  <input type="text" name="name" placeholder="שם מלא" required>
-  <input type="email" name="email" placeholder="אימייל" required>
-  <textarea name="message" placeholder="הודעה" required></textarea>
-  <button type="submit">שלח</button>
-</form>
+    <p>טלפון: 054-0000000 | אימייל: info@mishpaha.org | זמינות בימים א'-ה' 9:00–17:00</p>
+    <form action="https://formspree.io/f/mvgkdzwq" method="POST">
+      <input type="text" name="name" placeholder="שם מלא" required>
+      <input type="email" name="email" placeholder="אימייל" required>
+      <textarea name="message" placeholder="הודעה" required></textarea>
+      <button type="submit">שלח</button>
+    </form>
   </section>
 
   <script src="mish.js"></script>
