--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="#home">בית</a></li>
         <li><a href="#about">אודות</a></li>
         <li><a href="#donate">איך לעזור</a></li>
+		        <li><a href="#vision">החזון שלנו</a></li>
+
         <li><a href="#contact">צור קשר</a></li>
       </ul>
     </nav>
@@ -48,6 +50,17 @@
         <li>התנדבות – ליווי, סיוע טכני, או פשוט להיות שם</li>
       </ul>
     </p>
+  </section>
+  
+    <section id="vision">
+    <h2>החזון שלנו במילים</h2>
+<p>
+עמותת "משפאחה" נוסדה מתוך מטרה לייצר שינוי עומק בחייהם של יתומים בישראל ובתפוצות, תוך מתן מענה רגשי, חינוכי, טכנולוגי וחברתי.<br><br>
+החזון שלנו הוא להעניק לכל יתום נקודת פתיחה שווה – באמצעות תמיכה מקצועית, קהילה חמה, ושילוב חדשני של כלים טכנולוגיים מתקדמים שיאפשרו לו לבנות עתיד עצמאי ובטוח.<br><br>
+אנו שואפים להוות גוף מוביל במרחב החברתי, אשר לא רק נותן מענה פרטני – אלא גם משפיע על מדיניות, מקדם חקיקה רלוונטית, ואוסף נתונים לצורך יצירת פתרונות רחבים ויעילים.<br><br>
+"משפאחה" היא הרבה מעבר לשמה – היא חזון של שייכות, חמלה והזדמנות שווה.
+</p>
+
   </section>
 
   <section id="gallery">
