--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section id="home">
     <h1>ברוכים הבאים לעמותת משפאחה</h1>
     <p>עוזרים לילדים יתומים לבנות עתיד טוב יותר</p>
-    <button onclick"scrollToDonate()>לתרומה</button
+הוספת כפתור לתרומה עתידי
   </section>
 
   <section id="about">
