--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>עמותת משפאחה</title>
-  <link rel="stylesheet" href="mish.css">
+  <link rel="stylesheet" href="css/mish.css">
 </head>
 <body>
   <header>
@@ -86,6 +86,6 @@
 </form>
   </section>
 
-  <script src="mish.js"></script>
+  <script src="js/mish.js"></script>
 </body>
 </html>
