--- a/html/articles.html
+++ b/html/articles.html
@@ -16,6 +16,6 @@
     <div id="articles-container"></div>
   </main>
 
-  <script src="../js/articles.js"></script>
+<script type="module" src="../js/articles.js"></script>
 </body>
 </html>
