--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#contact">צור קשר</a></li>
       </ul>
     </nav>
-	<li> <a href="index.html">ניהול האתר</a></li>
+	<li> <a href="admin.html">ניהול האתר</a></li>
   </header>
 
   <section id="home">
