--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 <body>
-<a href="../index.html" class="back-link">← חזרה לעמוד הראשי</a>
+<a href="index.html" class="back-link">← חזרה לעמוד הראשי</a>
 
 <h2>🔑 התחברות לניהול כתבות</h2>
 <form id="loginForm">
