--- a/admin.html
+++ b/admin.html
@@ -24,15 +24,13 @@
   <form id="articleForm">
     <input type="text" id="title" placeholder="כותרת הכתבה" required>
     <input type="text" id="intro" placeholder="הקדמה קצרה">
-    <input type="text" id="genre" placeholder="ז'אנר (לדוגמה: ספורט, ביטחון, פוליטיקה)">
-    <input type="text" id="imageUrl" placeholder="קישור לתמונה">
-    <input type="text" id="logoImage" placeholder="קישור לתמונת לוגו (לא חובה)">
     <div id="editor" style="height: 300px;"></div>
     <button type="submit">✅ צור כתבה</button>
   </form>
 </div>
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
-<script type="module" src="../js/admin.js"></script>
+<script type="module" src="js/admin.js"></script>
+
 </body>
 </html>
