--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <h2>סרטון העמותה</h2>
     <div id="video-container"></div>
   </section>
+<a href="html/articles.html" class="cta-button">🔍 קרא כתבות</a>
 
   <section id="contact">
     <h2>צור קשר</h2>
