--- a/html/articles.html
+++ b/html/articles.html
@@ -9,13 +9,13 @@
 <body>
   <header>
     <h1>כתבות על ילדים יתומים</h1>
-    <a class="home-link" href="../index.html">חזרה לעמוד הבית</a>
+    <a class="home-link" href="../index.html">← חזרה לעמוד הבית</a>
   </header>
 
   <main>
     <div id="articles-container"></div>
   </main>
 
-<script type="module" src="../js/articles.js"></script>
+  <script type="module" src="../js/articles.js"></script>
 </body>
 </html>
