--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <div id="video-container"></div>
   </section>
 <a href="html/articles.html" class="cta-button">🔍 קרא כתבות</a>
+<a href="html/legal.html" class="cta-button">🔍 תקנון העמותה ומידע משפטי</a>
+
 
   <section id="contact">
     <h2>צור קשר</h2>
