--- a/html/legal.html
+++ b/html/legal.html
@@ -8,6 +8,7 @@
 <body>
   <header>
     <h1>חוקיות ואתיקה בעמותת משפאחה</h1>
+    <a class="home-link" href="../index.html">← חזרה לעמוד הבית</a>
   </header>
 
   <section id="rules-section">
