--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he">
 <head>
@@ -16,51 +15,46 @@
         <li><a href="#home">בית</a></li>
         <li><a href="#about">אודות</a></li>
         <li><a href="#donate">איך לעזור</a></li>
-		        <li><a href="#vision">החזון שלנו</a></li>
-
+        <li><a href="#vision">החזון שלנו</a></li>
         <li><a href="#contact">צור קשר</a></li>
       </ul>
     </nav>
-	<li> <a href="admin.html">ניהול האתר</a></li>
   </header>
 
   <section id="home">
     <h1>ברוכים הבאים לעמותת משפאחה</h1>
-    <p>עוזרים לילדים יתומים לבנות עתיד טוב יותר</p>
+    <p class="intro-text">עוזרים לילדים יתומים לבנות עתיד טוב יותר</p>
+    <div class="cta-links">
+      <a href="html/articles.html" class="cta-button">📚 קרא כתבות</a>
+      <a href="html/legal.html" class="cta-button">📄 תקנון ומידע משפטי</a>
+    </div>
   </section>
 
   <section id="about">
     <h2>אודות העמותה</h2>
     <p>
-      עמותת "משפאחה" נוסדה כדי לספק ליתומים נקודת פתיחה שווה – באמצעות חינוך, כלים טכנולוגיים, ותמיכה רגשית וחברתית.
-      <br><br>
-      אנו שואפים להקים קהילה תומכת שתשמש עבורם משפחה חלופית, ותאפשר להם לצמוח ולהגשים את עצמם. העמותה פועלת מתוך ראייה מערכתית רחבה, המשלבת חדשנות, חום אנושי, ורצון אמיתי לייצר שינוי בחייהם של אלפי ילדים.
-      <br><br>
-      אנו מאמינים שאין תחליף להורה – אך קיימת דרך לבנות רשת תמיכה משמעותית, שתצמיח אנשים שלמים ובטוחים בעצמם.
+      עמותת "משפאחה" נוסדה כדי לספק ליתומים נקודת פתיחה שווה – באמצעות חינוך, כלים טכנולוגיים, ותמיכה רגשית וחברתית.<br><br>
+      אנו שואפים להקים קהילה תומכת שתשמש עבורם משפחה חלופית, ותאפשר להם לצמוח ולהגשים את עצמם.<br><br>
+      אנו מאמינים שאין תחליף להורה – אך קיימת דרך לבנות רשת תמיכה משמעותית.
     </p>
   </section>
 
   <section id="donate">
     <h2>איך אפשר לעזור?</h2>
-    <p>
-      כל תרומה, התנדבות או מילה טובה – הן חלק מהחזון שלנו. אתם יכולים לעזור בדרכים הבאות:
-      <ul>
-        <li>תרומה כספית – דרך אשראי, ביט או העברה בנקאית</li>
-        <li>הפצה – שתפו את האתר והחזון שלנו ברשתות</li>
-        <li>התנדבות – ליווי, סיוע טכני, או פשוט להיות שם</li>
-      </ul>
-    </p>
+    <ul>
+      <li>💛 תרומה כספית – אשראי, ביט או העברה</li>
+      <li>📢 הפצה – שתפו את האתר והחזון שלנו</li>
+      <li>🤝 התנדבות – ליווי, סיוע טכני או פשוט להיות שם</li>
+    </ul>
   </section>
-  
-    <section id="vision">
-    <h2>החזון שלנו במילים</h2>
-<p>
-עמותת "משפאחה" נוסדה מתוך מטרה לייצר שינוי עומק בחייהם של יתומים בישראל ובתפוצות, תוך מתן מענה רגשי, חינוכי, טכנולוגי וחברתי.<br><br>
-החזון שלנו הוא להעניק לכל יתום נקודת פתיחה שווה – באמצעות תמיכה מקצועית, קהילה חמה, ושילוב חדשני של כלים טכנולוגיים מתקדמים שיאפשרו לו לבנות עתיד עצמאי ובטוח.<br><br>
-אנו שואפים להוות גוף מוביל במרחב החברתי, אשר לא רק נותן מענה פרטני – אלא גם משפיע על מדיניות, מקדם חקיקה רלוונטית, ואוסף נתונים לצורך יצירת פתרונות רחבים ויעילים.<br><br>
-"משפאחה" היא הרבה מעבר לשמה – היא חזון של שייכות, חמלה והזדמנות שווה.
-</p>
 
+  <section id="vision">
+    <h2>החזון שלנו במילים</h2>
+    <p>
+      החזון שלנו הוא להעניק לכל יתום נקודת פתיחה שווה – בעזרת תמיכה מקצועית, קהילה חמה וכלים טכנולוגיים מתקדמים.<br><br>
+      אנו שואפים להוביל שינוי מדיניות, לקדם חקיקה, ולבנות מערך תמיכה שישפיע באמת.<br><br>
+      "משפאחה" היא חזון של שייכות, חמלה והזדמנות שווה.
+    </p>
   </section>
 
   <section id="gallery">
@@ -72,23 +66,22 @@
     <h2>סרטון העמותה</h2>
     <div id="video-container"></div>
   </section>
-<a href="html/articles.html" class="cta-button">🔍 קרא כתבות</a>
-<a href="html/legal.html" class="cta-button">🔍 תקנון העמותה ומידע משפטי</a>
-
 
   <section id="contact">
     <h2>צור קשר</h2>
-    <p>טלפון: 054-0000000 | אימייל: info@mishpaha.org | זמינות בימים א'-ה' 9:00–17:00</p>
-<form action="https://formspree.io/f/mvgkdzwq" method="POST">
-  <!-- שדה honeypot -->
-  <input type="text" name="_gotcha" style="display:none">
-
-  <input type="text" name="name" placeholder="שם מלא" required>
-  <input type="email" name="email" placeholder="אימייל" required>
-  <textarea name="message" placeholder="הודעה" required></textarea>
-  <button type="submit">שלח</button>
-</form>
+    <p>טלפון: 054-0000000 | אימייל: info@mishpaha.org</p>
+    <form action="https://formspree.io/f/mvgkdzwq" method="POST">
+      <input type="text" name="_gotcha" style="display:none">
+      <input type="text" name="name" placeholder="שם מלא" required>
+      <input type="email" name="email" placeholder="אימייל" required>
+      <textarea name="message" placeholder="הודעה" required></textarea>
+      <button type="submit">שלח</button>
+    </form>
   </section>
+
+  <footer>
+    <a href="admin.html" class="admin-link">🔐 כניסה לניהול האתר</a>
+  </footer>
 
   <script src="js/mish.js"></script>
 </body>
