--- a/index.html
+++ b/index.html
@@ -7,53 +7,49 @@
   <link rel="stylesheet" href="css/mish.css">
 </head>
 <body>
-  <header>
+  <header class="hero">
     <div id="logo-container"></div>
-    <p class="slogan">משפחה היא לא רק דם – היא חום, קבלה ותמיכה.</p>
-    <nav>
-      <ul>
-        <li><a href="#home">בית</a></li>
-        <li><a href="#about">אודות</a></li>
-        <li><a href="#donate">איך לעזור</a></li>
-        <li><a href="#vision">החזון שלנו</a></li>
-        <li><a href="#contact">צור קשר</a></li>
-      </ul>
-    </nav>
+    <h1>משפחה היא לא רק דם – היא חיבוק, לב פתוח, ובחירה להיות שם בשביל מישהו</h1>
+    <blockquote>
+      "לכל ילד מגיע לגדול עם אהבה. אנחנו כאן כדי לוודא שזה יקרה."
+    </blockquote>
+    <div class="hero-video">
+      <iframe src="https://www.youtube.com/embed/6S4ANuwKKr0" allowfullscreen></iframe>
+    </div>
+    <div class="cta-links">
+      <a href="#donate" class="cta-button">🤝 איך אפשר לעזור</a>
+      <a href="#contact" class="cta-button">📩 צרו איתנו קשר</a>
+    </div>
   </header>
 
-  <section id="home">
-    <h1>ברוכים הבאים לעמותת משפאחה</h1>
-    <p class="intro-text">עוזרים לילדים יתומים לבנות עתיד טוב יותר</p>
-    <div class="cta-links">
-      <a href="html/articles.html" class="cta-button">📚 קרא כתבות</a>
-      <a href="html/legal.html" class="cta-button">📄 תקנון ומידע משפטי</a>
-    </div>
-  </section>
-
   <section id="about">
-    <h2>אודות העמותה</h2>
+    <h2>למה אנחנו כאן?</h2>
     <p>
-      עמותת "משפאחה" נוסדה כדי לספק ליתומים נקודת פתיחה שווה – באמצעות חינוך, כלים טכנולוגיים, ותמיכה רגשית וחברתית.<br><br>
-      אנו שואפים להקים קהילה תומכת שתשמש עבורם משפחה חלופית, ותאפשר להם לצמוח ולהגשים את עצמם.<br><br>
-      אנו מאמינים שאין תחליף להורה – אך קיימת דרך לבנות רשת תמיכה משמעותית.
+      בישראל חיים אלפי ילדים יתומים. ילדים שלא ביקשו להיוולד אל תוך שקט כואב, שמנסה בכל דרך להתמלא. אנחנו מאמינים
+      שכל ילד כזה צריך לא רק לשרוד – אלא לחיות. לגדול בתוך קהילה, עם תמיכה רגשית, הזדמנות חינוכית, ותחושת שייכות.<br><br>
+      עמותת "משפאחה" הוקמה כדי להעניק להם את זה בדיוק. אנחנו לא תחליף – אנחנו רשת חיבוק.
     </p>
   </section>
 
   <section id="donate">
-    <h2>איך אפשר לעזור?</h2>
+    <h2>איך אתם יכולים לשנות חיים?</h2>
     <ul>
-      <li>💛 תרומה כספית – אשראי, ביט או העברה</li>
-      <li>📢 הפצה – שתפו את האתר והחזון שלנו</li>
-      <li>🤝 התנדבות – ליווי, סיוע טכני או פשוט להיות שם</li>
+      <li>💛 תרומה חד־פעמית או חודשית – לבניית מענה רגשי, חינוכי וטכנולוגי</li>
+      <li>🧡 התנדבות – ליווי ילדים, תמיכה, מקצועות טכנולוגיים</li>
+      <li>📣 שיתוף – כל הפצה מגדילה את המעגל ומביאה עוד לב</li>
     </ul>
+    <div class="cta-links">
+      <a href="#contact" class="cta-button">⛑ תורמים עכשיו</a>
+      <a href="#contact" class="cta-button">🙋‍♀️ מתנדבים איתנו</a>
+    </div>
   </section>
 
   <section id="vision">
-    <h2>החזון שלנו במילים</h2>
+    <h2>החזון שלנו</h2>
     <p>
-      החזון שלנו הוא להעניק לכל יתום נקודת פתיחה שווה – בעזרת תמיכה מקצועית, קהילה חמה וכלים טכנולוגיים מתקדמים.<br><br>
-      אנו שואפים להוביל שינוי מדיניות, לקדם חקיקה, ולבנות מערך תמיכה שישפיע באמת.<br><br>
-      "משפאחה" היא חזון של שייכות, חמלה והזדמנות שווה.
+      אנחנו שואפים להקים קהילה חוצת מגזרים, שתעניק לכל יתום בישראל נקודת פתיחה שווה – עם חינוך, תמיכה מקצועית
+      וליווי אנושי שמחבר לב אל לב.<br><br>
+      יחד ניצור רשת של שייכות, נוכחות ואכפתיות. כי גם מי שנשאר לבד – לא באמת לבד.
     </p>
   </section>
 
@@ -62,13 +58,8 @@
     <div id="gallery-container"></div>
   </section>
 
-  <section id="video">
-    <h2>סרטון העמותה</h2>
-    <div id="video-container"></div>
-  </section>
-
   <section id="contact">
-    <h2>צור קשר</h2>
+    <h2>בואו נדבר</h2>
     <p>טלפון: 054-0000000 | אימייל: info@mishpaha.org</p>
     <form action="https://formspree.io/f/mvgkdzwq" method="POST">
       <input type="text" name="_gotcha" style="display:none">
@@ -77,6 +68,15 @@
       <textarea name="message" placeholder="הודעה" required></textarea>
       <button type="submit">שלח</button>
     </form>
+  </section>
+
+  <section id="extra-info">
+    <h2>מידע נוסף</h2>
+    <p class="subtext">למי שמעוניין להעמיק ולהבין את הצד המשפטי והתקנוני של פעילות העמותה:</p>
+    <div class="cta-links">
+      <a href="html/articles.html" class="cta-button small">📚 כתבות</a>
+      <a href="html/legal.html" class="cta-button small">📄 תקנון והיבטים משפטיים</a>
+    </div>
   </section>
 
   <footer>
