--- a/admin.html
+++ b/admin.html
@@ -20,17 +20,41 @@
 <button id="logout" style="display:none;">🚪 התנתק</button>
 
 <div id="adminPanel" style="display:none;">
-  <h2>📝 יצירת כתבה חדשה</h2>
+  <h2>📝 ניהול כתבות</h2>
+
+  <!-- בחירת כתבה קיימת לעריכה -->
+  <label for="articleSelect">בחר כתבה לעריכה:</label>
+  <select id="articleSelect">
+    <option value="">+ כתבה חדשה</option>
+  </select>
+
   <form id="articleForm">
     <input type="text" id="title" placeholder="כותרת הכתבה" required>
     <input type="text" id="intro" placeholder="הקדמה קצרה">
+
+    <!-- קטגוריה -->
+    <select id="category">
+      <option value="">בחר קטגוריה</option>
+      <option value="חינוך">חינוך</option>
+      <option value="חברה">חברה</option>
+      <option value="בריאות">בריאות</option>
+      <option value="כללי">כללי</option>
+    </select>
+
+    <!-- תמונה ראשית -->
+    <input type="file" id="imageUpload" accept="image/*">
+    <img id="previewImage" src="" alt="תמונה ראשית" style="max-width: 200px; display: none; margin-top: 10px;">
+
+    <!-- עורך טקסט -->
     <div id="editor" style="height: 300px;"></div>
-    <button type="submit">✅ צור כתבה</button>
+
+    <!-- כפתורים -->
+    <button type="submit">💾 שמור כתבה</button>
+    <button type="button" id="deleteBtn" style="display: none;">🗑 מחק כתבה</button>
   </form>
 </div>
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script type="module" src="js/admin.js"></script>
-
 </body>
 </html>
