--- a/html/article.html
+++ b/html/article.html
@@ -13,7 +13,16 @@
   </header>
 
   <main>
+    <img id="article-image" src="" alt="תמונה ראשית" style="max-width: 100%; display: none; margin-bottom: 20px;" />
+    
     <section id="article-content">טוען את התוכן...</section>
+
+    <div id="extra-images" style="margin-top: 30px; display: flex; flex-wrap: wrap; gap: 10px;"></div>
+
+    <div id="extra-file-container" style="margin-top: 20px; display: none;">
+      <strong>📎 קובץ מצורף: </strong>
+      <a id="extra-file-link" href="#" target="_blank">לחץ לפתיחה</a>
+    </div>
   </main>
 
   <script type="module" src="../js/article.js"></script>
