--- a/html/articles.html
+++ b/html/articles.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <div id="articles-container"></div>
+    <div id="articles-container" style="display: flex; flex-direction: column; gap: 20px;"></div>
   </main>
 
   <script type="module" src="../js/articles.js"></script>
