--- a/html/article.html
+++ b/html/article.html
@@ -13,13 +13,13 @@
   </header>
 
   <main>
-    <img id="article-image" src="" alt="תמונה ראשית" style="max-width: 100%; display: none; margin-bottom: 20px;" />
-    
+    <img id="article-image" class="article-image" alt="תמונה ראשית" />
+
     <section id="article-content">טוען את התוכן...</section>
 
-    <div id="extra-images" style="margin-top: 30px; display: flex; flex-wrap: wrap; gap: 10px;"></div>
+    <div id="extra-images" class="extra-images"></div>
 
-    <div id="extra-file-container" style="margin-top: 20px; display: none;">
+    <div id="extra-file-container" class="extra-file-container">
       <strong>📎 קובץ מצורף: </strong>
       <a id="extra-file-link" href="#" target="_blank">לחץ לפתיחה</a>
     </div>
