--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <li>📣 שיתוף – כל הפצה מגדילה את המעגל ומביאה עוד לב</li>
     </ul>
     <div class="cta-links">
-      <a href="#contact" class="cta-button">⛑ תורמים עכשיו</a>
-      <a href="#contact" class="cta-button">🙋‍♀️ מתנדבים איתנו</a>
+      <a href="#contact" class="cta-button">🙋‍♀️ רוצים להתנדב?</a>
     </div>
   </section>
 
