--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
   <section id="contact">
     <h2>בואו נדבר</h2>
-    <p>טלפון: 054-0000000 | אימייל: info@mishpaha.org</p>
+    <p>טלפון: 054-0000000 | אימייל: mishporg@gmail.com
+</p>
     <form action="https://formspree.io/f/mvgkdzwq" method="POST">
       <input type="text" name="_gotcha" style="display:none">
       <input type="text" name="name" placeholder="שם מלא" required>
@@ -70,7 +71,7 @@
 
   <section id="extra-info">
     <h2>מידע נוסף</h2>
-    <p class="subtext">למי שמעוניין להעמיק ולהבין את הצד המשפטי והתקנוני של פעילות העמותה:</p>
+    <p class="subtext">מידע נוסף אודות העמותה</p>
     <div class="cta-links">
       <a href="html/articles.html" class="cta-button small">📚 כתבות</a>
       <a href="html/legal.html" class="cta-button small">📄 תקנון והיבטים משפטיים</a>
