--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <section id="contact">
     <h2>בואו נדבר</h2>
-    <p>טלפון: 054-0000000 | אימייל: mishporg@gmail.com
+    <p>אימייל: mishporg@gmail.com
 </p>
     <form action="https://formspree.io/f/mvgkdzwq" method="POST">
       <input type="text" name="_gotcha" style="display:none">
