--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
     <div class="cta-links">
       <a href="html/articles.html" class="cta-button small">📚 כתבות</a>
       <a href="html/legal.html" class="cta-button small">📄 תקנון והיבטים משפטיים</a>
+	        <a href="html/inf.html" class="cta-button small">📚 מידע על ילדים יתומים</a>
+
     </div>
   </section>
 
