--- a/admin.html
+++ b/admin.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="he">
 <head>
@@ -33,7 +32,6 @@
     <input type="text" id="title" placeholder="כותרת הכתבה" required>
     <input type="text" id="intro" placeholder="הקדמה קצרה">
 
-    <!-- קטגוריה -->
     <select id="category">
       <option value="">בחר קטגוריה</option>
       <option value="חינוך">חינוך</option>
@@ -42,49 +40,43 @@
       <option value="כללי">כללי</option>
     </select>
 
-    <!-- תמונה ראשית -->
     <input type="file" id="imageUpload" accept="image/*">
     <img id="previewImage" src="" alt="תמונה ראשית" style="max-width: 200px; display: none; margin-top: 10px;">
 
-    <!-- תמונות נוספות לגוף הכתבה -->
     <label for="extraImagesUpload">תמונות נוספות לכתבה</label>
     <input type="file" id="extraImagesUpload" accept="image/*" multiple>
     <div id="extraImagesPreview" style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 10px;"></div>
 
-    <!-- עורך טקסט -->
     <div id="editor" style="height: 300px;"></div>
 
-    <!-- העלאת מסמך נוסף -->
     <label for="extraFileUpload">מסמך מצורף (PDF, Word וכו')</label>
     <input type="file" id="extraFileUpload" accept=".pdf,.doc,.docx,.txt">
     <div id="extraFileLinkContainer" style="display: none; margin-top: 10px;">
       קובץ הועלה: <a id="extraFileLink" href="#" target="_blank">פתח קובץ</a>
     </div>
 
-    <!-- כפתורים -->
     <button type="submit">💾 שמור כתבה</button>
     <button type="button" id="deleteBtn" style="display: none;">🗑 מחק כתבה</button>
   </form>
+
+  <hr>
+  <h2>📚 הוספת מידע על ילדים יתומים</h2>
+  <section id="info-admin">
+    <label for="info-title">כותרת:</label>
+    <input type="text" id="info-title" />
+
+    <label for="info-category">קטגוריה:</label>
+    <input type="text" id="info-category" />
+
+    <label for="info-order">סדר הופעה:</label>
+    <input type="number" id="info-order" />
+
+    <label for="info-content">תוכן:</label>
+    <div id="info-editor" style="height: 200px;"></div>
+
+    <button id="submit-info">שמור מידע</button>
+  </section>
 </div>
-
-<section id="info-admin">
-  <h2>הוספת מידע על ילדים יתומים</h2>
-
-  <label for="info-title">כותרת:</label>
-  <input type="text" id="info-title" />
-
-  <label for="info-category">קטגוריה:</label>
-  <input type="text" id="info-category" />
-
-  <label for="info-order">סדר הופעה:</label>
-  <input type="number" id="info-order" />
-
-  <label for="info-content">תוכן:</label>
-  <div id="info-editor" style="height: 200px;"></div>
-
-  <button id="submit-info">שמור מידע</button>
-</section>
-
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script type="module" src="js/admin.js"></script>
