--- a/html/inf.html
+++ b/html/inf.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>מידע על ילדים יתומים</title>
   <link rel="stylesheet" href="../css/inf.css" />
+  <script type="module" src="../js/firebase.js"></script>
   <script type="module" src="../js/inf.js" defer></script>
 </head>
 <body>
   <header>
     <h1>מידע על זכויות ילדים יתומים בישראל</h1>
+    <a class="home-link" href="../index.html">← חזרה לעמוד הבית</a>
   </header>
 
   <main>
