--- a/admin.html
+++ b/admin.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ניהול כתבות - עמותת משפאחה</title>
+  <title>ניהול תכנים - עמותת משפאחה</title>
   <link rel="stylesheet" href="../css/admin.css">
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 </head>
 <body>
 <a href="index.html" class="back-link">← חזרה לעמוד הראשי</a>
 
-<h2>🔑 התחברות לניהול כתבות</h2>
+<h2>🔑 התחברות</h2>
 <form id="loginForm">
   <input type="email" id="email" placeholder="אימייל" required>
   <input type="password" id="password" placeholder="סיסמה" required>
@@ -22,16 +22,12 @@
 <div id="adminPanel" style="display:none;">
   <h2>📝 ניהול כתבות</h2>
 
-  <!-- בחירת כתבה קיימת לעריכה -->
   <label for="articleSelect">בחר כתבה לעריכה:</label>
-  <select id="articleSelect">
-    <option value="">+ כתבה חדשה</option>
-  </select>
+  <select id="articleSelect"><option value="">+ כתבה חדשה</option></select>
 
   <form id="articleForm">
     <input type="text" id="title" placeholder="כותרת הכתבה" required>
     <input type="text" id="intro" placeholder="הקדמה קצרה">
-
     <select id="category">
       <option value="">בחר קטגוריה</option>
       <option value="חינוך">חינוך</option>
@@ -39,43 +35,41 @@
       <option value="בריאות">בריאות</option>
       <option value="כללי">כללי</option>
     </select>
-
     <input type="file" id="imageUpload" accept="image/*">
-    <img id="previewImage" src="" alt="תמונה ראשית" style="max-width: 200px; display: none; margin-top: 10px;">
-
-    <label for="extraImagesUpload">תמונות נוספות לכתבה</label>
+    <img id="previewImage" style="max-width:200px; display:none; margin-top:10px;">
+    <label for="extraImagesUpload">תמונות נוספות</label>
     <input type="file" id="extraImagesUpload" accept="image/*" multiple>
-    <div id="extraImagesPreview" style="display: flex; flex-wrap: wrap; gap: 10px; margin-top: 10px;"></div>
-
-    <div id="editor" style="height: 300px;"></div>
-
-    <label for="extraFileUpload">מסמך מצורף (PDF, Word וכו')</label>
+    <div id="extraImagesPreview"></div>
+    <div id="editor" style="height:300px;"></div>
+    <label for="extraFileUpload">מסמך מצורף</label>
     <input type="file" id="extraFileUpload" accept=".pdf,.doc,.docx,.txt">
-    <div id="extraFileLinkContainer" style="display: none; margin-top: 10px;">
-      קובץ הועלה: <a id="extraFileLink" href="#" target="_blank">פתח קובץ</a>
+    <div id="extraFileLinkContainer" style="display:none;">
+      קובץ הועלה: <a id="extraFileLink" target="_blank">פתח קובץ</a>
     </div>
-
     <button type="submit">💾 שמור כתבה</button>
-    <button type="button" id="deleteBtn" style="display: none;">🗑 מחק כתבה</button>
+    <button type="button" id="deleteBtn" style="display:none;">🗑 מחק כתבה</button>
   </form>
 
   <hr>
-  <h2>📚 הוספת מידע על ילדים יתומים</h2>
-  <section id="info-admin">
-    <label for="info-title">כותרת:</label>
-    <input type="text" id="info-title" />
-
-    <label for="info-category">קטגוריה:</label>
-    <input type="text" id="info-category" />
-
-    <label for="info-order">סדר הופעה:</label>
-    <input type="number" id="info-order" />
-
-    <label for="info-content">תוכן:</label>
-    <div id="info-editor" style="height: 200px;"></div>
-
-    <button id="submit-info">שמור מידע</button>
-  </section>
+  <h2>📚 הוספת מידע על יתומים</h2>
+  <form id="infoForm">
+    <input type="text" id="info-title" placeholder="כותרת המידע" required>
+    <input type="text" id="info-intro" placeholder="הקדמה (לא חובה)">
+    <input type="text" id="info-category" placeholder="קטגוריה">
+    <input type="number" id="info-order" placeholder="סדר הופעה (מספר)">
+    <input type="file" id="info-imageUpload" accept="image/*">
+    <img id="info-previewImage" style="max-width:200px; display:none; margin-top:10px;">
+    <label for="info-extraImagesUpload">תמונות נוספות</label>
+    <input type="file" id="info-extraImagesUpload" accept="image/*" multiple>
+    <div id="info-extraImagesPreview"></div>
+    <div id="info-editor" style="height:300px;"></div>
+    <label for="info-extraFileUpload">מסמך מצורף</label>
+    <input type="file" id="info-extraFileUpload" accept=".pdf,.doc,.docx,.txt">
+    <div id="info-extraFileLinkContainer" style="display:none;">
+      קובץ הועלה: <a id="info-extraFileLink" target="_blank">פתח קובץ</a>
+    </div>
+    <button type="submit" id="submit-info">💾 שמור מידע</button>
+  </form>
 </div>
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
