--- a/html/inf.html
+++ b/html/inf.html
@@ -2,25 +2,18 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>מידע על ילדים יתומים</title>
   <link rel="stylesheet" href="../css/inf.css" />
-  <script type="module" src="../js/firebase.js"></script>
-  <script type="module" src="../js/inf.js" defer></script>
 </head>
 <body>
-  <header>
-    <h1>מידע על זכויות ילדים יתומים בישראל</h1>
-    <a class="home-link" href="../index.html">← חזרה לעמוד הבית</a>
-  </header>
+  <a href="index.html" class="back-link">← חזרה לעמוד הבית</a>
+  <h1>📚 מידע על ילדים יתומים</h1>
 
-  <main>
-    <section id="categories"></section>
-    <section id="info-list"></section>
-  </main>
+  <div id="categories"></div>
+  <div id="info-list"></div>
 
-  <footer>
-    <p>כל הזכויות שמורות לעמותת משפאחה</p>
-  </footer>
+  <script type="module" src="../js/firebase.js"></script>
+  <script type="module" src="../js/inf.js"></script>
 </body>
 </html>
