--- a/html/inf.html
+++ b/html/inf.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="../css/inf.css" />
 </head>
 <body>
-  <a href="index.html" class="back-link">← חזרה לעמוד הבית</a>
+  <a href="../index.html" class="back-link">← חזרה לעמוד הבית</a>
   <h1>📚 מידע על ילדים יתומים</h1>
 
-  <div id="categories"></div>
+  <div id="categories" class="category-list"></div>
   <div id="info-list"></div>
 
   <script type="module" src="../js/firebase.js"></script>
