--- a/admin.html
+++ b/admin.html
@@ -25,29 +25,44 @@
   <label for="articleSelect">בחר כתבה לעריכה:</label>
   <select id="articleSelect"><option value="">+ כתבה חדשה</option></select>
 
-  <form id="articleForm">
-    <input type="text" id="title" placeholder="כותרת הכתבה" required>
-    <input type="text" id="intro" placeholder="הקדמה קצרה">
-    <select id="category">
-      <option value="">בחר קטגוריה</option>
-      <option value="חינוך">חינוך</option>
-      <option value="חברה">חברה</option>
-      <option value="בריאות">בריאות</option>
-      <option value="כללי">כללי</option>
-    </select>
-    <input type="file" id="imageUpload" accept="image/*">
-    <img id="previewImage" style="max-width:200px; display:none; margin-top:10px;">
-    <label for="extraImagesUpload">תמונות נוספות</label>
-    <input type="file" id="extraImagesUpload" accept="image/*" multiple>
-    <div id="extraImagesPreview"></div>
-    <div id="editor" style="height:300px;"></div>
-    <label for="extraFileUpload">מסמך מצורף</label>
-    <input type="file" id="extraFileUpload" accept=".pdf,.doc,.docx,.txt">
-    <div id="extraFileLinkContainer" style="display:none;">
-      קובץ הועלה: <a id="extraFileLink" target="_blank">פתח קובץ</a>
-    </div>
-    <button type="submit">💾 שמור כתבה</button>
-    <button type="button" id="deleteBtn" style="display:none;">🗑 מחק כתבה</button>
+<form id="articleForm">
+  <!-- בחירת יעד: כתבה או מידע -->
+  <label for="collectionSelect">בחר סוג פרסום:</label>
+  <select id="collectionSelect" required>
+    <option value="articles">כתבה</option>
+    <option value="info">מידע</option>
+  </select>
+
+  <input type="text" id="title" placeholder="כותרת הכתבה" required>
+  <input type="text" id="intro" placeholder="הקדמה קצרה">
+
+  <select id="category">
+    <option value="">בחר קטגוריה</option>
+    <option value="חינוך">חינוך</option>
+    <option value="חברה">חברה</option>
+    <option value="בריאות">בריאות</option>
+    <option value="כללי">כללי</option>
+  </select>
+
+  <input type="file" id="imageUpload" accept="image/*">
+  <img id="previewImage" style="max-width:200px; display:none; margin-top:10px;">
+
+  <label for="extraImagesUpload">תמונות נוספות</label>
+  <input type="file" id="extraImagesUpload" accept="image/*" multiple>
+  <div id="extraImagesPreview"></div>
+
+  <div id="editor" style="height:300px;"></div>
+
+  <label for="extraFileUpload">מסמך מצורף</label>
+  <input type="file" id="extraFileUpload" accept=".pdf,.doc,.docx,.txt">
+
+  <div id="extraFileLinkContainer" style="display:none;">
+    קובץ הועלה: <a id="extraFileLink" target="_blank">פתח קובץ</a>
+  </div>
+
+  <button type="submit">💾 שמור</button>
+  <button type="button" id="deleteBtn" style="display:none;">🗑 מחק כתבה</button>
+</form>
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 <script type="module" src="js/admin.js"></script>
