--- a/html/inf.html
+++ b/html/inf.html
@@ -10,8 +10,7 @@
   <a href="../index.html" class="back-link">← חזרה לעמוד הבית</a>
   <h1>📚 מידע על ילדים יתומים</h1>
 
-  <div id="categories" class="category-list"></div>
-  <div id="info-list"></div>
+  <div id="info-container"></div>
 
   <script type="module" src="../js/firebase.js"></script>
   <script type="module" src="../js/inf.js"></script>
