--- a/html/inf.html
+++ b/html/inf.html
@@ -7,8 +7,14 @@
   <link rel="stylesheet" href="../css/inf.css" />
 </head>
 <body>
+
+  <header class="hero">
+    <div id="logo-container"></div>
+    <h1>📚 מידע על ילדים יתומים</h1>
+    <blockquote>"לכל ילד מגיע לגדול עם אהבה. אנחנו כאן כדי לוודא שזה יקרה."</blockquote>
+  </header>
+
   <a href="../index.html" class="back-link">← חזרה לעמוד הבית</a>
-  <h1>📚 מידע על ילדים יתומים</h1>
 
   <div id="info-container"></div>
 
