--- a/index.html
+++ b/index.html
@@ -1,89 +1,81 @@
 <!DOCTYPE html>
+
 <html lang="he">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>עמותת משפאחה</title>
-  <link rel="stylesheet" href="css/mish.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>עמותת משפאחה</title>
+<link href="css/mish.css" rel="stylesheet"/>
 </head>
 <body>
-  <header class="hero">
-    <div id="logo-container"></div>
-    <h1>משפחה היא לא רק דם – היא חיבוק, לב פתוח, ובחירה להיות שם בשביל מישהו</h1>
-    <blockquote>
+<header class="hero">
+<div id="logo-container"></div>
+<h1>משפחה היא לא רק דם – היא חיבוק, לב פתוח, ובחירה להיות שם בשביל מישהו</h1>
+<blockquote>
       "לכל ילד מגיע לגדול עם אהבה. אנחנו כאן כדי לוודא שזה יקרה."
     </blockquote>
-    <div class="hero-video">
-      <iframe src="https://www.youtube.com/embed/6S4ANuwKKr0" allowfullscreen></iframe>
-    </div>
-    <div class="cta-links">
-      <a href="#donate" class="cta-button">🤝 איך אפשר לעזור</a>
-      <a href="#contact" class="cta-button">📩 צרו איתנו קשר</a>
-    </div>
-  </header>
-
-  <section id="about">
-    <h2>למה אנחנו כאן?</h2>
-    <p>
+<div class="hero-video">
+<iframe allowfullscreen="" src="https://www.youtube.com/embed/6S4ANuwKKr0"></iframe>
+</div>
+<div class="cta-links">
+<a class="cta-button" href="#donate">🤝 איך אפשר לעזור</a>
+<a class="cta-button" href="#contact">📩 צרו איתנו קשר</a>
+</div>
+</header>
+<section id="about">
+<h2>למה אנחנו כאן?</h2>
+<p>
       בישראל חיים אלפי ילדים יתומים. ילדים שלא ביקשו להיוולד אל תוך שקט כואב, שמנסה בכל דרך להתמלא. אנחנו מאמינים
-      שכל ילד כזה צריך לא רק לשרוד – אלא לחיות. לגדול בתוך קהילה, עם תמיכה רגשית, הזדמנות חינוכית, ותחושת שייכות.<br><br>
+      שכל ילד כזה צריך לא רק לשרוד – אלא לחיות. לגדול בתוך קהילה, עם תמיכה רגשית, הזדמנות חינוכית, ותחושת שייכות.<br/><br/>
       עמותת "משפאחה" הוקמה כדי להעניק להם את זה בדיוק. אנחנו לא תחליף – אנחנו רשת חיבוק.
     </p>
-  </section>
-
-  <section id="donate">
-    <h2>איך אתם יכולים לשנות חיים?</h2>
-    <ul>
-      <li>🧡 התנדבות – ליווי ילדים, תמיכה, מקצועות טכנולוגיים</li>
-      <li>📣 שיתוף – כל הפצה מגדילה את המעגל ומביאה עוד לב</li>
-    </ul>
-    <div class="cta-links">
-      <a href="#contact" class="cta-button">🙋‍♀️ רוצים להתנדב?</a>
-    </div>
-  </section>
-
-  <section id="vision">
-    <h2>החזון שלנו</h2>
-    <p>
+</section>
+<section id="donate">
+<h2>איך אתם יכולים לשנות חיים?</h2>
+<ul>
+<li>🧡 התנדבות – ליווי ילדים, תמיכה, מקצועות טכנולוגיים</li>
+<li>📣 שיתוף – כל הפצה מגדילה את המעגל ומביאה עוד לב</li>
+</ul>
+<div class="cta-links">
+<a class="cta-button" href="#contact">🙋‍♀️ רוצים להתנדב?</a>
+</div>
+</section>
+<section id="info-invite"><h2>מידע חשוב על זכויות ילדים יתומים</h2><p>בין אם אתם הורים, מחנכים, בני נוער או ילדים שגדלו ללא אחד ההורים – יצרנו עבורכם מרחב מידע נגיש, מסודר ומעודכן. בדף זה תוכלו למצוא הסברים על זכויות הילד היתום, כלים להתמודדות, תמיכה נפשית, מסמכים רלוונטיים, וקישורים לגורמים שעשויים לעזור.</p><div class="cta-links"><a class="cta-button" href="html/inf.html">📚 מעבר לדף המידע</a></div></section><section id="vision">
+<h2>החזון שלנו</h2>
+<p>
       אנחנו שואפים להקים קהילה חוצת מגזרים, שתעניק לכל יתום בישראל נקודת פתיחה שווה – עם חינוך, תמיכה מקצועית
-      וליווי אנושי שמחבר לב אל לב.<br><br>
+      וליווי אנושי שמחבר לב אל לב.<br/><br/>
       יחד ניצור רשת של שייכות, נוכחות ואכפתיות. כי גם מי שנשאר לבד – לא באמת לבד.
     </p>
-  </section>
-
-  <section id="gallery">
-    <h2>החזון שלנו בתמונות</h2>
-    <div id="gallery-container"></div>
-  </section>
-
-  <section id="contact">
-    <h2>בואו נדבר</h2>
-    <p>אימייל: mishporg@gmail.com
+</section>
+<section id="gallery">
+<h2>החזון שלנו בתמונות</h2>
+<div id="gallery-container"></div>
+</section>
+<section id="contact">
+<h2>בואו נדבר</h2>
+<p>אימייל: mishporg@gmail.com
 </p>
-    <form action="https://formspree.io/f/mvgkdzwq" method="POST">
-      <input type="text" name="_gotcha" style="display:none">
-      <input type="text" name="name" placeholder="שם מלא" required>
-      <input type="email" name="email" placeholder="אימייל" required>
-      <textarea name="message" placeholder="הודעה" required></textarea>
-      <button type="submit">שלח</button>
-    </form>
-  </section>
-
-  <section id="extra-info">
-    <h2>מידע נוסף</h2>
-    <p class="subtext">מידע נוסף אודות העמותה</p>
-    <div class="cta-links">
-      <a href="html/articles.html" class="cta-button small">📚 כתבות</a>
-      <a href="html/legal.html" class="cta-button small">📄 תקנון והיבטים משפטיים</a>
-	        <a href="html/inf.html" class="cta-button small">📚 מידע על ילדים יתומים</a>
-
-    </div>
-  </section>
-
-  <footer>
-    <a href="admin.html" class="admin-link">🔐 כניסה לניהול האתר</a>
-  </footer>
-
-  <script src="js/mish.js"></script>
+<form action="https://formspree.io/f/mvgkdzwq" method="POST">
+<input name="_gotcha" style="display:none" type="text"/>
+<input name="name" placeholder="שם מלא" required="" type="text"/>
+<input name="email" placeholder="אימייל" required="" type="email"/>
+<textarea name="message" placeholder="הודעה" required=""></textarea>
+<button type="submit">שלח</button>
+</form>
+</section>
+<section id="extra-info">
+<h2>מידע נוסף</h2>
+<p class="subtext">מידע נוסף אודות העמותה</p>
+<div class="cta-links">
+<a class="cta-button small" href="html/articles.html">📚 כתבות</a>
+<a class="cta-button small" href="html/legal.html">📄 תקנון והיבטים משפטיים</a>
+<a class="cta-button small" href="html/inf.html">📚 מידע על ילדים יתומים</a>
+</div>
+</section>
+<footer>
+<a class="admin-link" href="admin.html">🔐 כניסה לניהול האתר</a>
+</footer>
+<script src="js/mish.js"></script>
 </body>
 </html>
