--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
-html lang="he"
-head
+<html lang="he">
+<head>
+
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>עמותת משפאחה</title>
@@ -78,4 +79,4 @@ head
 </footer>
 <script src="js/mish.js"></script>
 </body>
-/html
+</html>
