--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header class="hero">
 <div id="logo-container"></div>
-<h1>משפחה היא לא רק דם – היא חיבוק, לב פתוח, ובחירה להיות שם בשביל מישהו</h1>
+<h1>משפחה היא לא רק דם – היא חיבוק, לב פתוח, ובחירה להיות שם בשביל מישהו,האתר נמצא כעת בשיפוצים-תודה על ההבנה</h1>
 <blockquote>
       "לכל ילד מגיע לגדול עם אהבה. אנחנו כאן כדי לוודא שזה יקרה."
     </blockquote>
